--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
 
 <!--    TELA PRINCIPAL-->
     <string name="txt_user">Olá, Thais!</string>
+    <string name="txt_subtitle">Que tal praticarmos um pouco hoje?</string>
+    <string name="txt_search">Pesquise sua dúvida</string>
     <string name="txt_menu">O que você procura?</string>
     <string name="txt_shield">Ligas</string>
     <string name="txt_dumbbell">Praticar</string>
@@ -24,15 +26,17 @@
     <string name="txt_store">Loja</string>
     <string name="txt_more">Mais</string>
 
-    <!--      DESCRIÇÃO DE IMAGENS-->
+<!--    DESCRIÇÃO DE IMAGENS-->
     <string name="dc_vetor">Desenho ondulado na cor verde</string>
     <string name="dc_logo">Logo do aplicativo GreenQuest</string>
+    <string name="dc_background">Desenho de uma floresta</string>
     <string name="dc_top_home">Desenho retângulo verde</string>
     <string name="dc_background_home">Fundo verde</string>
     <string name="dc_mascot">Cachorro Robô</string>
     <string name="dc_plants">Desenho de uma planta</string>
 
 <!--    DESCRIÇÃO BOTÕES-->
+    <string name="btn_user">Botão Usuário</string>
     <string name="btn_shield">Botão Ligas</string>
     <string name="btn_dumbbell">Botão Praticar</string>
     <string name="btn_question">Botão Aprender</string>
