--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,33 +17,27 @@
     <string name="link_login">Link para tela de login</string>
 
 <!--    TELA PRINCIPAL-->
-    <string name="txt_user">Olá, Thais!</string>
-    <string name="txt_subtitle">Que tal praticarmos um pouco hoje?</string>
-    <string name="txt_search">Pesquise sua dúvida</string>
-    <string name="txt_menu">O que você procura?</string>
-    <string name="txt_shield">Ligas</string>
-    <string name="txt_dumbbell">Praticar</string>
-    <string name="txt_question">Aprender</string>
+    <string name="txt_leagues">LIGAS</string>
+    <string name="txt_practice">Praticar</string>
+    <string name="txt_learn">Aprender</string>
     <string name="txt_forum">Fórum</string>
     <string name="txt_store">Loja</string>
-    <string name="txt_more">Mais</string>
+
+<!--    SUBTÍTULOS-->
+    <string name="sub_leagues">Crie times</string>
+
 
 <!--    DESCRIÇÃO DE IMAGENS-->
     <string name="dc_logo">Logo do aplicativo GreenQuest</string>
     <string name="dc_background">Desenho de uma floresta</string>
-    <string name="dc_top_home">Desenho retângulo verde</string>
-    <string name="dc_background_home">Fundo verde</string>
-    <string name="dc_mascot">Cachorro Robô</string>
-    <string name="dc_plants">Desenho de uma planta</string>
+    <string name="dc_user">Foto do usuário</string>
     <string name="dc_frame">Desenho de uma linha</string>
 
 <!--    DESCRIÇÃO BOTÕES-->
-    <string name="btn_user">Botão Usuário</string>
-    <string name="btn_shield">Botão Ligas</string>
-    <string name="btn_dumbbell">Botão Praticar</string>
-    <string name="btn_question">Botão Aprender</string>
+    <string name="btn_leagues">Botão Ligas</string>
+    <string name="btn_practice">Botão Praticar</string>
+    <string name="btn_learn">Botão Aprender</string>
     <string name="btn_forum">Botão Fórum</string>
     <string name="btn_store">Botão Loja</string>
-    <string name="btn_more">Botão Mais</string>
     <string name="btn_google">Botão para logar com sua conta Google</string>
 </resources>
