--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-<!--    TELA DE LOGIN-->
+    <!--    TELA DE LOGIN-->
     <string name="app_name">GreenQuest</string>
     <string name="text_email">Digite seu e-mail</string>
     <string name="text_password">Digite sua senha</string>
@@ -7,7 +7,7 @@
     <string name="signup">Não tem uma conta? Registre-se aqui</string>
     <string name="link_signup">Link para cadastro</string>
 
-<!--     TELA DE CADASTRO-->
+    <!--     TELA DE CADASTRO-->
     <string name="signup_name">Digite seu nome</string>
     <string name="signup_email">Cadastre seu e-mail</string>
     <string name="signup_password">Cadastre uma senha</string>
@@ -16,24 +16,25 @@
     <string name="login">Já possui conta? Entre aqui</string>
     <string name="link_login">Link para tela de login</string>
 
-<!--    TELA PRINCIPAL-->
+    <!--    TELA PRINCIPAL-->
     <string name="txt_leagues">LIGAS</string>
     <string name="txt_practice">Praticar</string>
     <string name="txt_learn">Aprender</string>
+    <string name="sub_leagues">Crie times</string>
     <string name="txt_forum">Fórum</string>
     <string name="txt_store">Loja</string>
 
-<!--    SUBTÍTULOS-->
-    <string name="sub_leagues">Crie times</string>
+    <!--    TELA LEARN-->
+    <string name="txt_esg">ESG significa Environmental, Social and Governance (ambiental, social e governança).\n\nSão práticas relacionadas ao meio ambiente, responsabilidade social e governança de uma organização. O termo foi criado em 2004 e está relacionado aos 17 Objetivos de Desenvolvimento Sustentável estabelecidos pelo Pacto Global, envolvendo a ONU e várias entidades internacionais.\n\nA jornada do ESG envolve transformar os negócios para construir um mundo inclusivo, ético e sustentável, buscando o alinhamento entre lucro, propósito e transparência. As ideias que sustentam os investimentos ESG têm raízes antigas e foram reforçadas ao longo do tempo por preocupações ambientais e sociais.\n\nDesde 2004 o ESG cresceu significativamente tendo milhares de signatários e trilhões de dólares em ativos comprometidos com esses princípios. Os Objetivos de Desenvolvimento Sustentável da ONU também apoiam os critérios ESG e podem gerar oportunidades econômicas estimadas em trilhões de dólares.\n\nO ESG é importante para as empresas e investidores, não apenas como uma estrutura de relatórios, mas também para atender às demandas dos funcionários, reguladores e sociedade em geral. O conceito está cada vez mais presente no mundo dos negócios, mostrando que o valor de uma empresa não se baseia apenas em resultados financeiros, mas também em suas conquistas não materiais e contribuição para a sociedade.\n\nNo Brasil, o conceito de ESG tem ganhado relevância nos últimos anos, impulsionado pela mobilização do mercado e a pandemia da Covid-19. Empresas estão sendo estimuladas a repensar e criar soluções que atendam aos critérios ESG.</string>
 
 
-<!--    DESCRIÇÃO DE IMAGENS-->
+    <!--    DESCRIÇÃO DE IMAGENS-->
     <string name="dc_logo">Logo do aplicativo GreenQuest</string>
     <string name="dc_background">Desenho de uma floresta</string>
     <string name="dc_user">Foto do usuário</string>
     <string name="dc_frame">Desenho de uma linha</string>
 
-<!--    DESCRIÇÃO BOTÕES-->
+    <!--    DESCRIÇÃO BOTÕES-->
     <string name="btn_leagues">Botão Ligas</string>
     <string name="btn_practice">Botão Praticar</string>
     <string name="btn_learn">Botão Aprender</string>
